--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # ===================== Server Configuration =====================
 VITE_PORT=9090
-VITE_BASE_URL=http://localhost:9090
+VITE_BASE_URL=https://turbo-xi-five.vercel.app
 VITE_API_PREFIX=/api
 
 # ===================== Auth & Login =====================
